--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,25 +4,8 @@ channels:
 dependencies:
   - python>3.4,<3.8
   - numpy>1.14.6,<1.19.4
-  - numba>=0.43.1
   - matplotlib
   - scikit-image
-  - pandas
-  - jupyterlab
-  - jupyter_contrib_nbextensions
-  - ipympl
-  - ipywidgets
-  - seaborn
-  - plotnine 
+  - pip
   - pip:
-    - 'napari[all]'
-    - torch>=1.6
-    - opencv-python-headless
-    - pyqtgraph>=0.11.0rc0
-    - natsort
-    - google-cloud-storage
-    - tqdm
     - tifffile
-    - cellpose
-    - aicsimageio
-    - xlrd
