--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ title: Imaging statistics
 #logo: 'logo.png'
 execute:
   execute_notebooks: "off"
+
+# Information about where the book exists on the web
+repository:
+  url: https://github.com/guiwitz/ImagingStats
