--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ execute:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/guiwitz/ImagingStats
+  use_repository_button: true
